<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_lib">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="text_nt">Темная тема</string>
    <string name="text_share">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="text_userallow">Пользовательское соглашение</string>
    <string name="link_YP">https://practicum.yandex.ru/android-developer/</string>
    <string name="student_email">igor.rogi777@yandex.ru</string>
    <string name="text1">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text2">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="legal_YP">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="error_internet">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="base_url_search">https://itunes.apple.com</string>
    <string name="text_history_search">Вы искали</string>
    <string name="text_history_clear">Очистить историю</string>
    <string name="text_track_lenght">Длительность</string>
    <string name="text_track_album">Альбом</string>
    <string name="text_track_year">Год</string>
    <string name="text_track_genre">Жанр</string>
    <string name="text_track_country">Страна</string>
    <string name="track_timer_start">00:00</string>
    <string name="button_media">Медиатека</string>
    <string name="text_media_favorites">Избранные треки</string>
    <string name="text_paylists">Плейлисты</string>
    <string name="text_new_paylist">Новый плейлист</string>
    <string name="text_media_empty">Ваша медиатека пуста</string>
    <string name="text_playlist_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="text_name">Название*</string>
    <string name="text_desc">Описание</string>
    <string name="text_create">Создать</string>
    <string name="text_add_playlist">Добавить в плейлист</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_text">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_close">Завершить</string>
    <string name="list_image_name">list_images</string>
    <string name="edit_playlist_tittle">Редактировать</string>
    <string name="edit_playlist_button">Сохранить</string>
    <string name="dialog_yes">ДА</string>
    <string name="dialog_no">НЕТ</string>
    <string name="dialog_deltrack_title">Хотите удалить трек?</string>
    <string name="dialog_delplaylist_title">Удалить плейлист</string>
    <string name="dialog_delplaylist_text">Хотите удалить плейлист?</string>
    <string name="message_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="message_playlist_empty">В этом плейлисте нет треков</string>
</resources>

