<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

        <LinearLayout
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            style="@style/LinearLayoutStyle"
            >

            <ImageView
                android:id="@+id/bt_back"
                android:layout_gravity="center"
                android:src="@drawable/back"
                style="@style/ImageViewStyle"
                android:scaleType="centerCrop"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_settings"
            android:textColor="@color/tx_color"
            android:textSize="@dimen/sp_22"
            android:layout_marginStart="@dimen/dp_20"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_10"
        style="@style/LinearLayoutStyle"
        >

        <TextView
            android:layout_gravity="center"
            android:text="@string/text_nt"
            android:textColor="@color/tx_color"
            style="@style/TextViewStyle"
            />

        <Switch
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/dp_20"
        style="@style/LinearLayoutStyle"
        >

        <TextView
            android:text="@string/text_share"
            android:textColor="@color/tx_color"
            style="@style/TextViewStyle"/>

        <ImageView
            android:src="@drawable/share"
            style="@style/ImageViewStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginEnd="@dimen/dp_20"
        style="@style/LinearLayoutStyle"
        >

        <TextView
            android:text="@string/text_support"
            android:textColor="@color/tx_color"
            style="@style/TextViewStyle"/>

        <ImageView
            android:src="@drawable/support"
            style="@style/ImageViewStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_45"
        android:layout_marginEnd="@dimen/dp_20"
        style="@style/LinearLayoutStyle"
        >

        <TextView
            android:text="@string/text_userallow"
            android:textColor="@color/tx_color"
            style="@style/TextViewStyle"/>

        <ImageView
            android:src="@drawable/allow"
            style="@style/ImageViewStyle"/>
    </LinearLayout>

</LinearLayout>