<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_search"
            android:backgroundTint="@color/white"
            android:text="@string/button_search"
            android:textColor="@color/tx_color"
            app:icon="@drawable/search"
            app:iconTint="@color/tx_color"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/bt_media"
            android:layout_marginTop="@dimen/dp_10"
            android:backgroundTint="@color/white"
            android:text="@string/button_lib"
            android:textColor="@color/tx_color"
            app:icon="@drawable/lib"
            app:iconTint="@color/tx_color"
            style="@style/ButtonStyle"
            />

        <Button
            android:id="@+id/bt_settings"
            android:layout_marginTop="@dimen/dp_10"
            android:backgroundTint="@color/white"
            android:text="@string/button_settings"
            android:textColor="@color/tx_color"
            app:icon="@drawable/settings"
            app:iconTint="@color/tx_color"
            style="@style/ButtonStyle"
            />

    </LinearLayout>
</LinearLayout>
