<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <ImageView
        android:id="@+id/iv_plBack"
        style="@style/ImageViewStyle2"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tittle_textView"
        style="@style/mySetTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/text_new_paylist"
        android:textFontWeight="500"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toEndOf="@+id/iv_plBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_imageAlbum"
        app:layout_constraintDimensionRatio="h,1:1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_textView"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_iv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        style="@style/CustomOutlineBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imageAlbum"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:textColorHint="?attr/colorSecondary"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/sp_16"
            android:textFontWeight="400"



            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_desc"
        style="@style/CustomOutlineBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?attr/colorSecondary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/sp_16"
            android:textFontWeight="400"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create"
        app:layout_constraintDimensionRatio="h,7.4:1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/text_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_desc"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintVertical_bias="1"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:background="@drawable/button_state"
        android:enabled="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>